--- a/trekommend.ui/src/styles/_base-card.scss
+++ b/trekommend.ui/src/styles/_base-card.scss
@@ -1,10 +1,15 @@
 .base-card {
   margin: .6rem .8rem;
 
-  .base-card-details {
+  &-cover-photo {
+    width: 100%;
+    height: 350px;
+  }
+
+  &-details {
     position: relative;
 
-    .base-card-user-name {
+    &-username {
       position: absolute;
       bottom: 0;
       right: 0;
