font and card styling

--- a/trekommend.ui/src/components/pages/SingleTrip/SingleTrip.scss
+++ b/trekommend.ui/src/components/pages/SingleTrip/SingleTrip.scss
@@ -1,3 +1,8 @@
+.trip-name {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
 .SingleTrip-recommendations-container {  
   display: flex;
   flex-flow: row wrap;
