--- a/trekommend.ui/src/styles/_fonts.scss
+++ b/trekommend.ui/src/styles/_fonts.scss
@@ -1,1 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap');
