--- a/trekommend.ui/src/components/pages/Trips/Trips.scss
+++ b/trekommend.ui/src/components/pages/Trips/Trips.scss
@@ -1,8 +1,17 @@
-.trips-container {  
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
+.Trips {
+  padding: 2% 10% 0;
 
-  padding-left: 10%;
-  padding-right: 10%;
+  &-header {
+    border-bottom: 1px solid black;
+    padding-bottom: .6rem;
+    margin-top: 1.2rem;
+  }
+
+  &-container {  
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    margin-top: 1.2rem;
+  }  
 }
+
