--- a/trekommend.ui/src/styles/_base-card.scss
+++ b/trekommend.ui/src/styles/_base-card.scss
@@ -1,9 +1,11 @@
 .base-card {
-  margin: .6rem .8rem;
-
   &-cover-photo {
     width: 100%;
     height: 250px;
+  }
+
+  &-cover-photo:hover {
+    opacity: .8;
   }
 
   &-details {
