single trip page spacing

--- a/trekommend.ui/src/styles/_base-card.scss
+++ b/trekommend.ui/src/styles/_base-card.scss
@@ -4,8 +4,11 @@
     height: 250px;
   }
 
-  &-cover-photo:hover {
-    opacity: .8;
+  &-cover-photo {
+    border-radius: 0;
+    &:hover {
+      opacity: .8;
+    }
   }
 
   &-details {
