--- a/trekommend.ui/src/components/pages/SingleTrip/SingleTrip.scss
+++ b/trekommend.ui/src/components/pages/SingleTrip/SingleTrip.scss
@@ -1,10 +1,22 @@
-.trip-name {
-  text-transform: uppercase;
-  letter-spacing: 4px;
+.SingleTrip {
+  .trip-name {
+    text-transform: uppercase;
+    letter-spacing: 4px;
+  }
+
+  &-header {
+    margin-left: 10%;
+    border-bottom: 1px solid black;
+    padding-bottom: .6rem;
+    margin-top: 1.2rem;
+  }
+  
+  &-recommendations-container {  
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    margin-top: 1.2rem;
+    padding: 0 10%;
+  }
 }
 
-.SingleTrip-recommendations-container {  
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-}
