--- a/trekommend.ui/src/styles/_base-card.scss
+++ b/trekommend.ui/src/styles/_base-card.scss
@@ -1,4 +1,6 @@
 .base-card {
+  margin-bottom: 2.5rem;
+
   &-cover-photo {
     width: 100%;
     height: 250px;
@@ -18,7 +20,7 @@
       font-family: 'Crimson-Text';
       font-size: 1.1rem;
       letter-spacing: 1.5px;
-      margin: 1.2rem 0;
+      margin: 1rem 0 1.2rem;
     }
 
     &-subtitle {
