login with google adds new user

--- a/trekommend.ui/src/components/pages/Login/Login.scss
+++ b/trekommend.ui/src/components/pages/Login/Login.scss
@@ -4,8 +4,14 @@
   justify-content: center;
   flex-direction: column;
   padding-top: 10%;
+
+  &-app-title {
+    text-transform: uppercase;
+    font-weight: 200;
+    letter-spacing: 4px;
+  }
   
-  #login-btn {
+  &-btn {
     margin-top: 4rem;
   }
 }
